--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <div class="body">
       <h1>Memory Game Trainer</h1>
       <div class="timer"></div>
-      <button>Reshuffle Deck</button>
-      <div class="cards">
+      <button id = "reshuffle">Reshuffle Deck</button>
+      <div class="deck">
         <div id="card1" class="playingCard">
           <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
-          <img src="https://images.unsplash.com/photo-1570263849386-fafb59c56a1a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YWZyaWNhbiUyMGVsZXBoYW50fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="back hidden" alt="Playing Card">
+          <img src="https://images.unsplash.com/photo-1588167056547-c183313da47c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Z3JleSUyMHdvbGZ8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80" class="wolf back hidden" alt="Playing Card">
         </div>
         <div id="card2" class="playingCard">
           <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
-          <img src="https://images.unsplash.com/photo-1570263849386-fafb59c56a1a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YWZyaWNhbiUyMGVsZXBoYW50fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="back hidden" alt="Playing Card">
+          <img src="https://images.unsplash.com/photo-1588167056547-c183313da47c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Z3JleSUyMHdvbGZ8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80" class="wolf back hidden" alt="Playing Card">
         </div>
         <div id="card3" class= "playingCard">
           <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
@@ -30,10 +30,74 @@
           <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
           <img src="https://images.unsplash.com/photo-1570263849386-fafb59c56a1a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YWZyaWNhbiUyMGVsZXBoYW50fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="elephant back hidden" alt="Playing Card">
         </div>
+        <div id="card5" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://images.unsplash.com/photo-1561731216-c3a4d99437d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8c2liZXJpYW4lMjB0aWdlcnxlbnwwfHwwfHw%3D&w=1000&q=80" class="tiger back hidden" alt="Playing Card">
+        </div>
+        <div id="card6" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://images.unsplash.com/photo-1561731216-c3a4d99437d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8c2liZXJpYW4lMjB0aWdlcnxlbnwwfHwwfHw%3D&w=1000&q=80" class="tiger back hidden" alt="Playing Card">
+        </div>
+        <div id="card7" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://zoo.sandiegozoo.org/sites/default/files/styles/hero_mobile_560x670/public/2019-01/hero-lion.jpg?itok=QOrb0EWP" class="lion back hidden" alt="Playing Card">
+        </div>
+        <div id="card8" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://zoo.sandiegozoo.org/sites/default/files/styles/hero_mobile_560x670/public/2019-01/hero-lion.jpg?itok=QOrb0EWP" class="lion back hidden" alt="Playing Card">
+        </div>
+        <div id="card9" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://i.guim.co.uk/img/media/a755adc8dead2440d5ac448a289c6592e176afe8/0_90_5184_3110/master/5184.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=3fb2bcec8ce12ed3214dcc8eccb663bc" class="bear back hidden" alt="Playing Card">
+        </div>
+        <div id="card10" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://i.guim.co.uk/img/media/a755adc8dead2440d5ac448a289c6592e176afe8/0_90_5184_3110/master/5184.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=3fb2bcec8ce12ed3214dcc8eccb663bc" class="bear back hidden" alt="Playing Card">
+        </div>
+        <div id="card11" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://images.squarespace-cdn.com/content/v1/5c2d06bd8f51304e8d79dfa0/1555202705977-AUTQ2TYQXQAYB52657CX/American%2BBison.jpg?format=2500w" class="bison back hidden" alt="Playing Card">
+        </div>
+        <div id="card12" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://images.squarespace-cdn.com/content/v1/5c2d06bd8f51304e8d79dfa0/1555202705977-AUTQ2TYQXQAYB52657CX/American%2BBison.jpg?format=2500w" class="bison back hidden" alt="Playing Card">
+        </div>
+        <div id="card13" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/1-wild-horse-portrait-lisa-fisher.jpg" class="horse back hidden" alt="Playing Card">
+        </div>
+        <div id="card14" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/1-wild-horse-portrait-lisa-fisher.jpg" class="horse back hidden" alt="Playing Card">
+        </div>
+        <div id="card15" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/Gorille_des_plaines_de_l%27ouest_%C3%A0_l%27Espace_Zoologique.jpg/1200px-Gorille_des_plaines_de_l%27ouest_%C3%A0_l%27Espace_Zoologique.jpg" class="gorilla back hidden" alt="Playing Card">
+        </div>
+        <div id="card16" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/Gorille_des_plaines_de_l%27ouest_%C3%A0_l%27Espace_Zoologique.jpg/1200px-Gorille_des_plaines_de_l%27ouest_%C3%A0_l%27Espace_Zoologique.jpg" class="gorilla back hidden" alt="Playing Card">
+        </div>
+        <div id="card17" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/TheCheethcat.jpg" class="cheetah back hidden" alt="Playing Card">
+        </div>
+        <div id="card18" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/TheCheethcat.jpg" class="cheetah back hidden" alt="Playing Card">
+        </div>
+        <div id="card19" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://cdn.britannica.com/61/157461-050-2BC37814/ostrich.jpg" class="ostrich back hidden" alt="Playing Card">
+        </div>
+        <div id="card20" class="playingCard">
+          <img src="https://media.istockphoto.com/photos/bicycle-rider-back-playing-card-design-picture-id157772536?k=20&m=157772536&s=170667a&w=0&h=46bM0a2wuwcddiOzNOHTfS9PcUzjXwNTTCy33SrkC_0=" class="front" alt="Playing Card">
+          <img src="https://cdn.britannica.com/61/157461-050-2BC37814/ostrich.jpg" class="ostrich back hidden" alt="Playing Card">
+        </div>
       </div>
       <div class="scores">
         <div class="score" id="correct">
-          <h2>Correct:<span id="numCorrect"></span></h2>
+          <h2>Pairs Found:<span id="numCorrect"></span></h2>
         </div>
         <div class="score" id="incorrect">
           <h2>Incorrect:<span id="numIncorrect"></span></h2>
